# video-roughcut

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh
docs/: cli-usage.md
docs/skills/video-roughcut-workflow/: SKILL.md
docs/skills/video-roughcut-workflow/agents/: openai.yaml
src/video_roughcut/: __init__.py  cli.py  config.py  discovery.py  merge.py  models.py  reporting.py  runner.py  split.py  tools.py
src/video_roughcut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/video_roughcut/backends/: __init__.py  auto_editor.py  base.py
src/video_roughcut/gui/: app.py  presets.py  task_queue.py
src/video_roughcut/gui/tabs/: merge_tab.py  queue_tab.py  rough_cut_tab.py  split_tab.py
src/video_roughcut/gui/widgets/: log_viewer.py
src/video_roughcut/gui/workers/: __init__.py  merge_worker.py  rough_cut_worker.py  split_worker.py
src/video_roughcut/packaging/: __init__.py  cli.py  config.py  ffmpeg_concat.py  hyperframes_renderer.py  models.py  project_builder.py
tests/: test_backend.py  test_cli.py  test_config.py  test_discovery.py  test_gui_task_queue.py  test_gui_workers.py  test_merge.py  test_packaging.py  test_reporting.py  test_runner.py  test_split.py  test_tools.py
